# PyQt6-Mystery-Maker

./: README.md  pyproject.toml
pyqt6_mystery_maker/: controller.py  mystery_maker  mystery_maker.py
pyqt6_mystery_maker/__pycache__/: controller.cpython-39.py
tests/: test_pyqt6_mystery_maker.py
