[tool.poetry]
name = "PyQt6-mystery-maker"
version = "0.1.0"
description = ""
authors = ["Aeris <hampfrey207@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
